packages/fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.stderr
error: Type with ident 'Ident { ident: "BadType", span: #0 bytes(225..232) }' not defined in the ABI.
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  | #[indexer(manifest = "packages/fuel-indexer-tests/trybuild/simple_wasm.yaml")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `indexer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0432]: unresolved import `fuels::types::traits`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     use fuels::types::traits::Tokenizable;
  |                       ^^^^^^ could not find `traits` in `types`

error[E0422]: cannot find struct, variant or union type `SomeEvent` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     let s = SomeEvent {
  |             ^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `BlockData` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     let data: Vec<BlockData> = vec![BlockData {
  |                   ^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
  |
2  + use fuel_indexer::prelude::fuel::BlockData;
   |
2  + use fuel_indexer_plugin::prelude::BlockData;
   |
2  + use fuel_indexer_types::fuel::BlockData;
   |
2  + use fuel_indexer_utils::plugin::prelude::BlockData;
   |

error[E0422]: cannot find struct, variant or union type `BlockData` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     let data: Vec<BlockData> = vec![BlockData {
  |                                     ^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
  |
2  + use fuel_indexer::prelude::fuel::BlockData;
   |
2  + use fuel_indexer_plugin::prelude::BlockData;
   |
2  + use fuel_indexer_types::fuel::BlockData;
   |
2  + use fuel_indexer_utils::plugin::prelude::BlockData;
   |

error[E0433]: failed to resolve: use of undeclared crate or module `fuel`
  --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
   |
   |             status: fuel::TransactionStatus::default(),
   |                     ^^^^ use of undeclared crate or module `fuel`
   |
help: there is a crate or module with a similar name
   |
46 |             status: fuels::TransactionStatus::default(),
   |                     ~~~~~
help: consider importing one of these items
   |
2  + use fuel_indexer::prelude::fuel::TransactionStatus;
   |
2  + use fuel_indexer_plugin::prelude::fuel::TransactionStatus;
   |
2  + use fuel_indexer_types::fuel::TransactionStatus;
   |
2  + use fuel_indexer_utils::plugin::prelude::fuel::TransactionStatus;
   |
     and 1 other candidate
help: if you import `TransactionStatus`, refer to it directly
   |
46 -             status: fuel::TransactionStatus::default(),
46 +             status: TransactionStatus::default(),
   |

error[E0433]: failed to resolve: use of undeclared crate or module `fuel`
  --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
   |
   |                 fuel::Receipt::Call {
   |                 ^^^^ use of undeclared crate or module `fuel`
   |
help: there is a crate or module with a similar name
   |
49 |                 fuels::Receipt::Call {
   |                 ~~~~~
help: consider importing one of these items
   |
2  + use fuel_indexer::prelude::fuel::Receipt;
   |
2  + use fuel_indexer_plugin::prelude::fuel::Receipt;
   |
2  + use fuel_indexer_types::fuel::Receipt;
   |
2  + use fuel_indexer_utils::plugin::prelude::fuel::Receipt;
   |
     and 2 other candidates
help: if you import `Receipt`, refer to it directly
   |
49 -                 fuel::Receipt::Call {
49 +                 Receipt::Call {
   |

error[E0433]: failed to resolve: use of undeclared crate or module `fuel`
  --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
   |
   |                 fuel::Receipt::ReturnData {
   |                 ^^^^ use of undeclared crate or module `fuel`
   |
help: there is a crate or module with a similar name
   |
60 |                 fuels::Receipt::ReturnData {
   |                 ~~~~~
help: consider importing one of these items
   |
2  + use fuel_indexer::prelude::fuel::Receipt;
   |
2  + use fuel_indexer_plugin::prelude::fuel::Receipt;
   |
2  + use fuel_indexer_types::fuel::Receipt;
   |
2  + use fuel_indexer_utils::plugin::prelude::fuel::Receipt;
   |
     and 2 other candidates
help: if you import `Receipt`, refer to it directly
   |
60 -                 fuel::Receipt::ReturnData {
60 +                 Receipt::ReturnData {
   |

error[E0433]: failed to resolve: use of undeclared type `Transaction`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |             transaction: Transaction::default(),
  |                          ^^^^^^^^^^^ use of undeclared type `Transaction`
  |
help: consider importing one of these items
  |
2  + use fuel_indexer::prelude::fuel::Transaction;
   |
2  + use fuel_indexer_plugin::prelude::fuel::Transaction;
   |
2  + use fuel_indexer_types::fuel::Transaction;
   |
2  + use fuel_indexer_utils::plugin::prelude::fuel::Transaction;
   |
     and 3 other candidates

error[E0425]: cannot find function `serialize` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     let mut bytes = serialize(&data);
  |                     ^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
  |
2  + use chrono::naive::serde::ts_microseconds::serialize;
   |
2  + use chrono::naive::serde::ts_microseconds_option::serialize;
   |
2  + use chrono::naive::serde::ts_milliseconds::serialize;
   |
2  + use chrono::naive::serde::ts_milliseconds_option::serialize;
   |
     and 16 other candidates

error[E0425]: cannot find function `handle_events` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
  |
  |     handle_events(ptr, len);
  |     ^^^^^^^^^^^^^ not found in this scope

error[E0433]: failed to resolve: use of undeclared crate or module `fuel`
  --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
   |
   |         header: fuel::Header {
   |                 ^^^^ use of undeclared crate or module `fuel`
   |
help: there is a crate or module with a similar name
   |
33 |         header: fuels::Header {
   |                 ~~~~~

error[E0433]: failed to resolve: use of undeclared crate or module `fuel`
  --> ../fuel-indexer-tests/trybuild/fail_if_attribute_abi_arg_includes_invalid_type.rs
   |
   |         transactions: vec![fuel::TransactionData {
   |                            ^^^^ use of undeclared crate or module `fuel`
   |
help: there is a crate or module with a similar name
   |
45 |         transactions: vec![fuels::TransactionData {
   |                            ~~~~~
